--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "todo",
   "version": "0.0.1",
+  "scripts": {
+  },
   "dependencies": {
-      "jquery": "2.2.0",
-      "angular": "1.5.6",
-      "angular-material": "",
-      "angular-ui-router": "",
-      "font-awesome": ""
+    "jquery": "2.2.0",
+    "angular": "1.5.6",
+    "angular-material": "",
+    "angular-ui-router": "",
+    "font-awesome": "",
+    "bower": "",
+    "ngstorage": ""
   }
 }
