--- a/build.gradle
+++ b/build.gradle
@@ -10,19 +10,7 @@ buildscript {
 }
 
 
-apply plugin: 'code4reference'
-
-c4rArgs {
-    sender = 'Rakesh'
-    message = 'Hello there !!!!'
-
-    nestedArgs{
-        receiver = "gradleAdmin"
-        email = "gradleAdmin@code4reference.com"
-    }
-}
-
-
+apply plugin: 'clientDependences'
 apply plugin: 'java'
 apply plugin: 'war'
 
@@ -33,8 +21,8 @@ repositories {
     jcenter()
 }
 
-/*clientDependences {
-    cashePath = ""
-    packagePath = ""
-    destinationPath = ""
-}*/
+clientDependences {
+    cashePath = "1"
+    packagePath = "2"
+    destinationPath = "3"
+}
